--- a/Exam/Views/Events/Details.cshtml
+++ b/Exam/Views/Events/Details.cshtml
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="~/EventUploads/@(Model.Name)_@(Model.ImageURL)" width="100%" alt="@Model.Name">
+                    <img src="~/EventUploads/@(Model.ImageURL)" width="100%" alt="@Model.Name">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
