--- a/Exam/Views/Events/Edit.cshtml
+++ b/Exam/Views/Events/Edit.cshtml
@@ -97,7 +97,7 @@
     <script>
         $(document).ready(function () {
             var output = document.getElementById("ImageUrlPreview");
-            output.src = '@Url.Content("~/EventUploads")/' + '@(Model.Name)_@(Model.ImageURL)';
+            output.src = '@Url.Content("~/EventUploads")/' + '@(Model.ImageURL)';
         });
     </script>
 }
