--- a/Exam/Views/Events/Index.cshtml
+++ b/Exam/Views/Events/Index.cshtml
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <img src="EventUploads/@(item.Name)_@(item.ImageURL)" width="100%" alt="@item.Name">
+                        <img src="EventUploads/@(item.ImageURL)" width="100%" alt="@item.Name">
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
